css/src/style.scss
/* ... */
.woocommerce #respond input#submit.alt:hover,
.woocommerce a.button.alt:hover,
.woocommerce button.button.alt:hover,
.woocommerce input.button.alt:hover {
  background-color: #005992 !important;
}

table.blue th,
table:not(.clean):not(.shop_attributes) th {
  background-color: color(stt);
}

table.blue th a,
table.blue th a:hover,
table:not(.clean):not(.shop_attributes) th a,
table:not(.clean):not(.shop_attributes) th a:hover {
  color: #fff;
}

@media screen and (max-width: 991px) {
  table:not(.clean):not(.shop_attributes) {
    width: 100% !important;
  }
}
table:not(.clean):not(.shop_attributes) th {
  text-align: center;
  color: #fff;
  font-weight: 400;
}

table.shop_attributes th {
  font-weight: 400;
}

table.red th {
  background-color: #dd3d29;
}

table.green th {
  background-color: #69aa00;
}

table.gray th {
  background-color: #3d3d3d;
}

table:not(.clean):not(.shop_attributes):not(.shop_table) td {
  text-align: left;
  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
}

table.shop_attributes td,
table.shop_table td {
  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
}

.woocommerce table.shop_table tbody th,
.woocommerce table.shop_table tfoot td,
.woocommerce table.shop_table tfoot th {
  border-top: 0 !important;
}

table:not(.clean):not(.shop_attributes) td:first-child {
  border-left: none;
}

table:not(.clean):not(.shop_attributes) tr:last-child td {
  border-bottom: none;
}

tbody:not(.clean):not(.shop_attributes) tr:first-child th:first-child,
thead:not(.clean):not(.shop_attributes) tr:first-child th:first-child {
  border: 0 solid transparent;
  border-top-left-radius: 7px;
  -moz-border-top-left-radius: 7px;
  -webkit-border-top-left-radius: 7px;
  border-bottom-left-radius: 0 !important;
  -moz-border-bottom-left-radius: 0 !important;
  -webkit-border-bottom-left-radius: 0 !important;
}

tbody:not(.clean):not(.shop_attributes) tr:first-child th:last-child,
thead:not(.clean):not(.shop_attributes) tr:first-child th:last-child {
  border: 0 solid transparent;
  border-top-right-radius: 7px;
  -moz-border-top-right-radius: 7px;
  -webkit-border-top-right-radius: 7px;
  border-bottom-right-radius: 0 !important;
  -moz-border-bottom-right-radius: 0 !important;
  -webkit-border-bottom-right-radius: 0 !important;
}

tbody:not(.clean):not(.shop_attributes) tr:last-child th:first-child,
tfoot:not(.clean):not(.shop_attributes) tr:last-child th:first-child {
  border: 0 solid transparent;
  border-bottom-left-radius: 7px;
  -moz-border-bottom-left-radius: 7px;
  -webkit-border-bottom-left-radius: 7px;
}

tbody:not(.clean):not(.shop_attributes) tr:last-child th:last-child,
tfoot:not(.clean):not(.shop_attributes) tr:last-child th:last-child {
  border: 0 solid transparent;
  border-bottom-right-radius: 7px;
  -moz-border-bottom-right-radius: 7px;
  -webkit-border-bottom-right-radius: 7px;
}

table:not(.clean):not(.shop_attributes) .narrow {
  width: 100% !important;
}

.woocommerce div.product .woocommerce-tabs ul.tabs {
  margin: 0 !important;
}

.woocommerce .quantity .qty {
  height: 31px;
}

body .syntaxhighlighter .gutter,
body .syntaxhighlighter a,
body .syntaxhighlighter code,
body .syntaxhighlighter div,
body .syntaxhighlighter table,
body .syntaxhighlighter table caption,
body .syntaxhighlighter table tbody,
body .syntaxhighlighter table td,
body .syntaxhighlighter table thead,
body .syntaxhighlighter table tr,
body .syntaxhighlighter textarea {
  font-size: 11pt !important;
  line-height: 13pt !important;
}

.container .blog-span {
  margin-left: 0 !important;
}

.blog-post {
  position: relative;

  .span10 {
    padding: 0 0 0 60px;
  }

  .blog-post-body {
    font-size: 18px;
    font-weight: 100;
    color: #000000;
  }

  .blog-post-details {
    width: 100%;
    overflow: hidden;
    color: #000000;

    .blog-post-details-item {
      font-size: 14px;
    }
  }

  a h2,
  h2 a {
    color: #279fbb;
    -webkit-transition: 0.5s color;
    -moz-transition: 0.5s color;
    -o-transition: 0.5s color;
    transition: 0.5s color;

    &:hover {
      color: #3a3a3a;
    }
  }

  h2 {
    margin-bottom: 10px;
  }

  p {
    line-height: 1.45;
    margin: 0 0 20px;
  }
}

.blog-post .blog-post-details-item {
  position: relative;
  float: left;
  margin: 0 0 0 20px;
}

.blog-post .blog-post-details-item:first-child {
  margin-left: 0;
}

.posts-list {
  padding: 0;
  margin: 0;

  li {
    display: block;
    overflow: hidden;
    margin: 0 0 15px;
  }

  .posts-list-thumbnail {
    float: left;
    -webkit-transition: opacity 0.5s;
    -moz-transition: opacity 0.5s;
    -o-transition: opacity 0.5s;
    transition: opacity 0.5s;
    img {
      border-radius: 2px;
    }

    &:hover {
      opacity: 0.8;
      filter: alpha(opacity=80);
    }
  }

  .posts-list-title {
    display: block;
  }

  .posts-list-meta {
    font-size: 12px;
    color: #aaa;
  }
}

.posts-list-content {
  padding: 0 0 0 75px;
}

.text-input {
  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  padding: 6px 5px;
  box-sizing: border-box;
  border: 0;
  outline: 0;
}

.blog-search .blog-search-input,
.text-input:focus {
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-bottomleft: 5px;
}

.text-input:focus {
  box-shadow: inset 7px 0 7px -7px rgba(0, 105, 170, 0.9),
    inset 0 7px 7px -7px rgba(0, 105, 170, 0.9),
    inset 0 -7px 7px -7px rgba(0, 105, 170, 0.9);
  -moz-box-shadow: inset 7px 0 7px -7px rgba(0, 105, 170, 0.9),
    inset 0 7px 7px -7px rgba(0, 105, 170, 0.9),
    inset 0 -7px 7px -7px rgba(0, 105, 170, 0.9);
  -webkit-box-shadow: inset 7px 0 7px -7px rgba(0, 105, 170, 0.9),
    inset 0 7px 7px -7px rgba(0, 105, 170, 0.9),
    inset 0 -7px 7px -7px rgba(0, 105, 170, 0.9);
  -webkit-border-top-left-radius: 5px;
  border-top-left-radius: 5px;
  -webkit-border-bottom-left-radius: 5px;
  border-bottom-left-radius: 5px;
}
/* ... */

